# aurora-lens-demo

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  index.html  pyproject.toml
src/aurora_lens_demo/: __init__.py  demo.py  evidence_authority.py
tests/: test_evidence_authority.py  test_static_demo_client.py
