[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-lens-demo"
version = "0.1.0"
description = "Bounded public demo of Aurora-Lens evidence authority demotion."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Margaret Stokes" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
